2000-03-11  Tim Magill  <tim@magill@gate.net>

	* remake.c
	(update_file): If not -k, we can bail when a failure is detected.
	If we don't, its possible that dependecies of double_colon rules
	will get built after a failure has been detected.
	
	(update_goal_chain): removed unused updating_makefiles
	(update_file_1): cleaned up post remake_file() handling

2000-02-29  Tim Magill  <magill@gate.net>

	* remake.c (update_goal_chain): eliminated double colon loop.
	update_file() handles the double colon logic, so
	update_goal_chain() doesn't have to.
	

	* remake.c (update_file): 
	(update_file_1): Moved consedered test to update_file_1() so
	update_file() can more easily return a target_state_t which
	represents the state of the entire double colon rule.


2000-02-20  Tim Magill  <magill@gate.net>

	* remake.c (check_dep):
	(update_file_1):
	(update_goal_chain):
	(check_dep): Changed return value of target updating functions to
	be enum target_state_t.  This allows each caller to know the state
	of the target being processed after each call.  Thus,
	update_goal_chain() can know from the return value of
	update_file() whether or not a target has completed and can be
	removed from the goal chain.

	* remake.c (update_goal_chain): removed variable
	ocommands_started, it was essentially unused.
	
	
2000-02-12  Tim Magill  <magill@gate.net>

	* remake.c (update_file_1): 
	(notice_finished_file): 
	(remake_file): 

	* main.c (main): 

	* job.c (reap_children): 
	(start_job_command): 

	* file.c (enter_file)
	(remove_intermediates): 
	(print_file): 

	* filedef.h: converted update_status field from a short int, to an
	unsigned int :1.  previously, update status indicated whether the
	file had actually executed any commands, won, lost, or lost under
	-q conditions.  command_state indicates more clearly whether or
	not any commands have been executed for this file.  lost or lost
	under -q conditions can be determined by a combination of