@@ -1,4 +1,15 @@
-2000-03-11  Tim Magill  <tim@magill@gate.net>
+2000-03-12  Tim Magill  <magill@gate.net>
+
+	* remake.c (update_goal_chain): re-arranged logic so that it makes
+	more sense.  After update_file(), the target status is used to
+	handle the goal and possibly remove it from the goal chain.
+	
+	* remake.c (update_file): If -q we can bail as soon as we detect
+	that something needs to be remade.
+
+
+	
+2000-03-11  Tim Magill  <magill@gate.net>
 
 	* remake.c
 	(update_file): If not -k, we can bail when a failure is detected.
